# neuro-bitnet

./: .dockerignore  .env.example  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.rag  LICENSE-APACHE  LICENSE-MIT  README.md  benchmark_report.html  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.cargo/: config.toml
.github/workflows/: ci.yml  docker-publish.yml  pages.yml  release.yml  tests.yml
benchmarks/: BENCHMARK_REPORT.md  BENCHMARK_REPORT_EN.md  BENCHMARK_REPORT_ES.md  benchmark.py  benchmark_bitnet.sh  benchmark_bitnet_translation.sh  benchmark_inference.sh  comprehensive_benchmark.sh  generate_report.py  quick_bench.py  run_benchmark.py  run_tests.sh
benchmarks/results/: bitnet_benchmark_20251231_005511.md
crates/bitnet-sys/: Cargo.toml  build.rs  wrapper.h
crates/bitnet-sys/src/: lib.rs
crates/classifier/: Cargo.toml
crates/classifier/src/: classifier.rs  lib.rs
crates/classifier/src/patterns/: mod.rs  patterns_es.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  commands.rs  lib.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: classification.rs  document.rs  error.rs  lib.rs  search.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: handlers.rs  lib.rs  main.rs  server.rs  state.rs
crates/embeddings/: Cargo.toml
crates/embeddings/src/: embedder.rs  error.rs  lib.rs  models.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: analyzer.rs  chunk.rs  error.rs  indexer.rs  languages.rs  lib.rs
crates/inference/: Cargo.toml
crates/inference/src/: backend.rs  cache.rs  error.rs  lib.rs  model.rs  models.rs  sampler.rs  subprocess.rs  translation.rs
crates/inference/src/native/: backend.rs  batch.rs  context.rs  mod.rs  model.rs  pool.rs  sampler.rs
crates/llm/: Cargo.toml
crates/llm/src/: client.rs  error.rs  lib.rs  types.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  main.rs  protocol.rs  server.rs  tools.rs
crates/search/: Cargo.toml
crates/search/src/: error.rs  lib.rs  result.rs  searcher.rs  wikipedia.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  error.rs  handlers.rs  lib.rs  routes.rs  server.rs  state.rs
crates/storage/: Cargo.toml
crates/storage/src/: error.rs  files.rs  lib.rs  memory.rs  similarity.rs  storage.rs
docker/: Dockerfile.rag  docker-compose.bitnet.yml  docker-compose.override.yml.example  docker-compose.yml
docs/: BENCHMARK_ANALYSIS.md  Gemfile  QUALITY_TUNING.md  _config.yml  api.md  benchmarks.md  index.html  index.md  local-inference.md
docs/_data/: contact.yml
docs/_includes/: metadata-hook.html
docs/_posts/: 2025-12-29-getting-started-es.md  2025-12-29-getting-started.md  2025-12-30-api-reference-es.md  2025-12-30-api-reference.md  2025-12-31-architecture-overview-es.md  2025-12-31-architecture-overview.md  2025-12-31-bitnet-benchmark-results-es.md  2025-12-31-bitnet-benchmark-results.md  2025-12-31-daemon-server-guide-es.md  2025-12-31-daemon-server-guide.md  2025-12-31-local-inference-guide-es.md  2025-12-31-local-inference-guide.md  2025-12-31-mcp-integration-guide-es.md  2025-12-31-mcp-integration-guide.md  2025-12-31-translation-benchmark-es.md  2025-12-31-translation-benchmark.md
docs/_sass/: custom.scss
docs/_tabs/: about.md  api.md  architecture.md  benchmarks.md  getting-started.md
docs/assets/css/: custom.css
docs/es/: api.md  benchmarks.md  index.md  local-inference.md
presets/: balanced.env  creative.env  mirostat.env  precise.env  tools.env
prompts/: README.md  system_prompt.txt  system_prompt_tools.txt
scripts/: download_model.sh  entrypoint.sh  healthcheck.sh  rag.py  rag_simple.py  setup_bitnet.sh
src/: __init__.py
src/cli/: __init__.py  index_project.py  rag_client.py
src/rag/: __init__.py  classifier.py  core.py  embeddings.py  web_search.py
src/rag/indexer/: __init__.py  base.py  generic.py  python.py
src/rag/storage/: __init__.py  base.py  files.py  memory.py
src/server/: __init__.py  rag_server.py
tests/: __init__.py  benchmark.py  benchmark_report.html  conftest.py  generate_report.py  requirements.txt  stress_test.py  test_classifier.py
tests/integration/: test_rag_pipeline.py
tests/unit/: test_classifier.py  test_core.py  test_indexer_generic.py  test_indexer_python.py  test_storage_base.py  test_storage_files.py  test_storage_memory.py
