[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/embeddings",
    "crates/storage",
    "crates/classifier",
    "crates/indexer",
    "crates/search",
    "crates/llm",
    "crates/inference",
    "crates/bitnet-sys",
    "crates/server",
    "crates/cli",
    "crates/daemon",
    "crates/mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["neuro-bitnet contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/madkoding/neuro-bitnet"
homepage = "https://github.com/madkoding/neuro-bitnet"
description = "A high-performance RAG (Retrieval Augmented Generation) server with intelligent query classification"
keywords = ["rag", "embeddings", "llm", "search", "ai"]
categories = ["command-line-utilities", "web-programming", "science"]
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Embeddings
fastembed = "5"

# Vector math
ndarray = "0.16"

# Regex
regex = "1.10"
once_cell = "1.19"

# Code parsing
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"

# HTML parsing
scraper = "0.20"
url = "2.5"

# CLI
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
console = "0.15"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async utilities
async-trait = "0.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Testing
rstest = "0.18"
mockall = "0.12"
tokio-test = "0.4"
tempfile = "3.9"

# Workspace crates
neuro-core = { path = "crates/core" }
neuro-embeddings = { path = "crates/embeddings" }
neuro-storage = { path = "crates/storage" }
neuro-classifier = { path = "crates/classifier" }
neuro-indexer = { path = "crates/indexer" }
neuro-search = { path = "crates/search" }
neuro-llm = { path = "crates/llm" }
neuro-server = { path = "crates/server" }

# Async streams
futures = "0.3"
tokio-stream = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
