[package]
name = "neuro-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for neuro-bitnet RAG system"
keywords = ["cli", "rag", "embeddings", "bitnet"]
categories = ["command-line-utilities"]

[[bin]]
name = "neuro"
path = "src/main.rs"

[dependencies]
neuro-core = { workspace = true }
neuro-embeddings = { workspace = true }
neuro-storage = { workspace = true }
neuro-classifier = { workspace = true }
neuro-indexer = { workspace = true }
neuro-search = { workspace = true }
neuro-llm = { workspace = true }
neuro-inference = { path = "../inference", features = ["download"] }
neuro-server = { workspace = true }

clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
colored = "3"
indicatif = "0.17"
dialoguer = "0.11"
walkdir = "2"
