[package]
name = "neuro-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Model Context Protocol server for neuro-bitnet"

[[bin]]
name = "neuro-mcp"
path = "src/main.rs"

[dependencies]
# Internal crates
neuro-inference = { path = "../inference" }
neuro-core = { path = "../core" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# CLI
clap = { workspace = true, features = ["env"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# MCP protocol
async-trait = "0.1"
futures = "0.3"

# Directories
dirs = "5"
