[package]
name = "neuro-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP API server for neuro-bitnet RAG system"
keywords = ["server", "rag", "api", "rest"]
categories = ["web-programming::http-server"]

[dependencies]
neuro-core = { workspace = true }
neuro-embeddings = { workspace = true }
neuro-storage = { workspace = true }
neuro-classifier = { workspace = true }
neuro-search = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tokio-test = { workspace = true }
axum-test = "15"
